src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Existing Opportunity</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>00 - Qualification</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Existing Oppty</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>00 - Qualification</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>New or Add-On</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>00 - Qualification</fullName>
        </values>
        <values>
            <fullName>01 - Discovery</fullName>
        </values>
        <values>
            <fullName>02 - Business Validation</fullName>
        </values>
        <values>
            <fullName>03 - Solution Validation</fullName>
        </values>
        <values>
            <fullName>04 - Manage to Close</fullName>
        </values>
        <values>
            <fullName>05a - Closed Won</fullName>
        </values>
        <values>
            <fullName>05b - Closed Lost</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Renewal or Renewal %2B Add-On</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>01 - Re-Engagement</fullName>
        </values>
        <values>
            <fullName>02 - Business Validation</fullName>
        </values>
        <values>
            <fullName>03 - Solution Validation</fullName>
        </values>
        <values>
            <fullName>04 - Manage to Close</fullName>
        </values>
        <values>
            <fullName>05a - Closed Won</fullName>
        </values>
        <values>
            <fullName>05b - Closed Lost</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ACV__c</fullName>
        <formula>IF(Term_Length_months__c &lt;= 12,Amount,Amount / ( Term_Length_months__c /12))</formula>
        <label>ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AE_Acceptance_Status__c</fullName>
        <label>AE Acceptance Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected - Before Initial Meeting</fullName>
                </value>
                <value>
                    <fullName>Rejected - After Initial Meeting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AE_Accepted_Date__c</fullName>
        <inlineHelpText>To be filled out by AE only. This is the date upon which the AE accepts the opportunity as well-qualified and worthy of pursuing into the pipeline.</inlineHelpText>
        <label>AE Accepted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AE_Rejected_Details__c</fullName>
        <label>AE Rejected Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AccountOwner__c</fullName>
        <formula>Account.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountOwner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Dev_Owner_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Dev Owner User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Development_Owner_Username__c</fullName>
        <formula>CreatedBy.Username</formula>
        <label>Account Development Owner Username</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Development_Owner__c</fullName>
        <formula>CreatedBy.FirstName &amp; &quot; &quot; &amp; CreatedBy.LastName</formula>
        <label>Account Development Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Opportunity_Owner__c</fullName>
        <formula>Owner.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Opportunity Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount_Opportunity__c</fullName>
        <formula>TEXT( Amount )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assign_Manually__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assign Manually</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Average_Sales_Cycle__c</fullName>
        <formula>IF(Amount&lt;=70000,70,90)/30.4167</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Sales Cycle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Sales_Velocity__c</fullName>
        <formula>( Expected_Value__c ) / Average_Sales_Cycle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Sales Velocity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Identified__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Primary contact for billing</inlineHelpText>
        <label>Billing Contact Identified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Contact)</relationshipLabel>
        <relationshipName>Opportunities5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Criteria_Defined__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Business criteria (e.g. recommendation relevancy score) that will impact buying decision</inlineHelpText>
        <label>Business Criteria Defined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Criteria_Details__c</fullName>
        <label>Business Criteria Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_Drivers__c</fullName>
        <inlineHelpText>What business challenges, goals, etc, are the primary business drivers for interest in Node? Be as specific as possible.</inlineHelpText>
        <label>Business Drivers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Buying_Decision_Process_Defined__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Step-by-step process (e.g. PoC -&gt; committee vote) to reach a buying decision</inlineHelpText>
        <label>Buying Decision Process Defined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Buying_Decision_Process_Details__c</fullName>
        <label>Buying Decision Process Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Buying_Decision_Team_Defined__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Full list of team members that will be involved in buying decision (champion, influencers, evaluators, execs, buyer(s))</inlineHelpText>
        <label>Buying Decision Team Defined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Buying_Decision_Team_Details__c</fullName>
        <label>Buying Decision Team Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Buying_Decision_Timeline_Defined__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Estimated timeline to reach a buying decision</inlineHelpText>
        <label>Buying Decision Timeline Defined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Buying_Decision_Timeline_Details__c</fullName>
        <label>Buying Decision Timeline Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Call_Recording__c</fullName>
        <description>URL for Zoom.us recording OR Twilio link to the recorded call from Outreach. In order to listen to Twilio call, you need stereo headphones or &quot;Save Link As&quot; and play in mono.</description>
        <inlineHelpText>For proof of prospect engagement. URL for Zoom.us recording OR Twilio link to the recorded call from Outreach goes here.</inlineHelpText>
        <label>Call Recording</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Champion_Identified__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The person(s) who will go to bat for you at their company. They are typically the person who has the to most to lose by not using Node.</inlineHelpText>
        <label>Champion Identified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Champion_Influence_Details__c</fullName>
        <label>Champion Influence Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Champion_Influence_Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Buyer or key influencers have confirmed Champion&apos;s ability to effectively influence the buyer(s) decision</inlineHelpText>
        <label>Champion Influence Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Champion_Interest_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Champion has directly confirmed that they will help you get in front of the right people.</inlineHelpText>
        <label>Champion Interest Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Champion_Interest_Details__c</fullName>
        <label>Champion Interest Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Champion_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Champion Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Champion_Score__c</fullName>
        <formula>IF(Champion_Identified__c=TRUE,1,0)+IF( Champion_Interest_Confirmed__c =TRUE,1,0)+IF( Champion_Influence_Validated__c =TRUE,1,0)+IF( Champion_Value_Add_Demonstrated__c =TRUE,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Champion Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Champion_Value_Add_Demonstrated__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Champion is actively promoting Node internally, and/or may have confirmed meeting with buyer.</inlineHelpText>
        <label>Champion Value-Add Demonstrated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Champion_Value_Add_Details__c</fullName>
        <label>Champion Value-Add Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Close_Plan__c</fullName>
        <label>Close Plan</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commit_Score__c</fullName>
        <formula>IF( Verbal_Commit_from_Economic_Buyer_Receiv__c =TRUE,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commit Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Compelling_Event_Details__c</fullName>
        <label>Compelling Event Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Compelling_Event_Identified__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>An event that sets an upper bound on the timeline to make a buying decision (e.g. sales kickoff)</inlineHelpText>
        <label>Compelling Event Identified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitive_Risk_Assessed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Qualitative and quantitative risk of competitors relative to pain points and solution fit</inlineHelpText>
        <label>Competitive Risk Assessed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitive_Risk_Assessment_Details__c</fullName>
        <label>Competitive Risk Assessment Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competitor_Details__c</fullName>
        <label>Competitor Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competitors_Identified__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>What competitors is Node going up against in this deal (could include incumbents)?</inlineHelpText>
        <label>Competitors Identified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitors_Score__c</fullName>
        <formula>IF(Competitors_Identified__c =TRUE,1,0)+IF(  Competitive_Risk_Assessed__c =TRUE,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Competitors Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <inlineHelpText>The final date on which the contract is valid.</inlineHelpText>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Out_For_Signature_Date__c</fullName>
        <label>Contract Out For Signature Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Out_For_Signature__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Out For Signature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Signatory_Identified__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Contact who will act as signatory for the contract</inlineHelpText>
        <label>Contract Signatory Identified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Signatory_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Signatory Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Contact)</relationshipLabel>
        <relationshipName>Opportunities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <inlineHelpText>List the starting/effective for the sales contract. Should align with initial product delivery date.</inlineHelpText>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Created_by_Role_Static__c</fullName>
        <label>Created by Role (Static)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_From_Initial_Meeting_Date__c</fullName>
        <formula>TODAY() -  Initial_Meeting_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days From Initial Meeting Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Until_Close__c</fullName>
        <formula>CloseDate - Today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Until Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Until_Opt_Out__c</fullName>
        <formula>Opt_Out_Expiration_Date__c  - Today()</formula>
        <label>Days Until Opt-Out</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Until_Renewal__c</fullName>
        <formula>Contract_End_Date__c  - Today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Until Renewal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Untouched__c</fullName>
        <formula>Today() -  LastActivityDate</formula>
        <label>Days Untouched</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_from_Close_Date__c</fullName>
        <formula>TODAY() -  CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days from Close Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_from_Last_Activity__c</fullName>
        <formula>TODAY() -  Last_Activity_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days from Last Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_from_Last_Stage_Change__c</fullName>
        <formula>TODAY() -  Last_Stage_Change_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days from Last Stage Change</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Decision_Criteria_Score__c</fullName>
        <formula>IF( Business_Criteria_Defined__c =TRUE,1,0)+IF(  Technical_Criteria_Defined__c =TRUE,1,0)+IF(  Political_Criteria_Defined__c =TRUE,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Decision Criteria Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Decision_Process_Score__c</fullName>
        <formula>IF(Buying_Decision_Team_Defined__c =TRUE,1,0)+IF(  Buying_Decision_Process_Defined__c =TRUE,1,0)+IF(  Buying_Decision_Timeline_Defined__c =TRUE,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Decision Process Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Economic_Buyer_Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Budget of buyer confirmed and aligned with Node price points.</inlineHelpText>
        <label>Economic Buyer Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Economic_Buyer_Budget_Details__c</fullName>
        <label>Economic Buyer Budget Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Economic_Buyer_Identified__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The person(s) who control the budget and make the final yes/no call on the purchase.</inlineHelpText>
        <label>Economic Buyer Identified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Economic_Buyer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Economic Buyer Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Contact)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Economic_Buyer_Need_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Pain points/needs of buyer confirmed and aligned with Node solution.</inlineHelpText>
        <label>Economic Buyer Need Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Economic_Buyer_Need_Details__c</fullName>
        <label>Economic Buyer Need Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Economic_Buyer_Score__c</fullName>
        <formula>IF( Economic_Buyer_Identified__c =TRUE,1,0)+IF(  Economic_Buyer_Need_Confirmed__c =TRUE,1,0)+IF(  Economic_Buyer_Budget_Confirmed__c =TRUE,1,0)+IF(  Economic_Buyer_Sponsorship_Committed__c =TRUE,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Economic Buyer Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Economic_Buyer_Sponsorship_Committed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Buyer has confirmed that they will support a Node purchase provided it meets decision criteria.</inlineHelpText>
        <label>Economic Buyer Sponsorship Committed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Economic_Buyer_Sponsorship_Details__c</fullName>
        <label>Economic Buyer Sponsorship Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Employee_Size_Qualification_AE_Score__c</fullName>
        <formula>IF(ISPICKVAL(Employee_Size_Qualification_AE__c, &quot;1 - 9&quot;), 1, 
 IF(ISPICKVAL(Employee_Size_Qualification_AE__c, &quot;10 - 24&quot;), 1, 
  IF(ISPICKVAL(Employee_Size_Qualification_AE__c, &quot;25 - 49&quot;), 2, 
   IF(ISPICKVAL(Employee_Size_Qualification_AE__c, &quot;50 - 99&quot;), 3, 
    IF(ISPICKVAL(Employee_Size_Qualification_AE__c, &quot;100 - 249&quot;), 4,
     IF(ISPICKVAL(Employee_Size_Qualification_AE__c, &quot;250 - 499&quot;), 4,
      IF(ISPICKVAL(Employee_Size_Qualification_AE__c, &quot;500 - 999&quot;), 4,
       IF(ISPICKVAL(Employee_Size_Qualification_AE__c, &quot;1,000 - 2,499&quot;), 4,
        IF(ISPICKVAL(Employee_Size_Qualification_AE__c, &quot;2,500 - 4,999&quot;), 2,
         IF(ISPICKVAL(Employee_Size_Qualification_AE__c, &quot;5,000 - 9,999&quot;), 2,
          IF(ISPICKVAL(Employee_Size_Qualification_AE__c, &quot;10,000+&quot;), 2, null
    )
   )
  )
 )
) 
)
)
)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Size Qualification AE Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employee_Size_Qualification_AE__c</fullName>
        <label>Employee Size Qualification - AE</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 - 9</fullName>
                </value>
                <value>
                    <fullName>10 - 24</fullName>
                </value>
                <value>
                    <fullName>25 - 49</fullName>
                </value>
                <value>
                    <fullName>50 - 99</fullName>
                </value>
                <value>
                    <fullName>100 - 249</fullName>
                </value>
                <value>
                    <fullName>250 - 499</fullName>
                </value>
                <value>
                    <fullName>500 - 999</fullName>
                </value>
                <value>
                    <fullName>1,000 - 2,499</fullName>
                </value>
                <value>
                    <fullName>2,500 - 4,999</fullName>
                </value>
                <value>
                    <fullName>5,000 - 9,999</fullName>
                </value>
                <value>
                    <fullName>10,000+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employee_Size_Qualification_SDR_Score__c</fullName>
        <formula>IF(ISPICKVAL(Employee_Size_Qualification_SDR__c, &quot;1 - 9&quot;), 1, 
 IF(ISPICKVAL(Employee_Size_Qualification_SDR__c, &quot;10 - 24&quot;), 1, 
  IF(ISPICKVAL(Employee_Size_Qualification_SDR__c, &quot;25 - 49&quot;), 2, 
   IF(ISPICKVAL(Employee_Size_Qualification_SDR__c, &quot;50 - 99&quot;), 3, 
    IF(ISPICKVAL(Employee_Size_Qualification_SDR__c, &quot;100 - 249&quot;), 4,
     IF(ISPICKVAL(Employee_Size_Qualification_SDR__c, &quot;250 - 499&quot;), 4,
      IF(ISPICKVAL(Employee_Size_Qualification_SDR__c, &quot;500 - 999&quot;), 4,
       IF(ISPICKVAL(Employee_Size_Qualification_SDR__c, &quot;1,000 - 2,499&quot;), 4,
        IF(ISPICKVAL(Employee_Size_Qualification_SDR__c, &quot;2,500 - 4,999&quot;), 2,
         IF(ISPICKVAL(Employee_Size_Qualification_SDR__c, &quot;5,000 - 9,999&quot;), 2,
          IF(ISPICKVAL(Employee_Size_Qualification_SDR__c, &quot;10,000+&quot;), 2, null
    )
   )
  )
 )
) 
)
)
)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Size Qualification SDR Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employee_Size_Qualification_SDR__c</fullName>
        <label>Employee Size Qualification - SDR</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 - 9</fullName>
                </value>
                <value>
                    <fullName>10 - 24</fullName>
                </value>
                <value>
                    <fullName>25 - 49</fullName>
                </value>
                <value>
                    <fullName>50 - 99</fullName>
                </value>
                <value>
                    <fullName>100 - 249</fullName>
                </value>
                <value>
                    <fullName>250 - 499</fullName>
                </value>
                <value>
                    <fullName>500 - 999</fullName>
                </value>
                <value>
                    <fullName>1,000 - 2,499</fullName>
                </value>
                <value>
                    <fullName>2,500 - 4,999</fullName>
                </value>
                <value>
                    <fullName>5,000 - 9,999</fullName>
                </value>
                <value>
                    <fullName>10,000+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expected_Value__c</fullName>
        <formula>Amount * Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Date__c</fullName>
        <label>Follow Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Handoff_to_Customer_Success_Date__c</fullName>
        <label>Handoff to Customer Success Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Handoff_to_Customer_Success_Initiated__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Written handoff to customer success has been sent by sales and steps to start onboarding have been taken</inlineHelpText>
        <label>Handoff to Customer Success Initiated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ideal_Customer_Profile__c</fullName>
        <description>-Industry
-Technology
-Locations
-Ideal Company Size
-What are they not targeting or excluding?</description>
        <inlineHelpText>-Industry
-Technology
-Locations
-Ideal Company Size
-What are they not targeting or excluding?</inlineHelpText>
        <label>Ideal Customer Profile</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Impact_of_Solution_on_KPIs_Detail__c</fullName>
        <label>Impact of Solution on KPIs Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Impact_of_Solution_on_KPIs_Determined__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Quantifiable impact that Node is likely to have on the key metrics.</inlineHelpText>
        <label>Impact of Solution on KPIs Determined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Impact_of_Unresolved_Pain_Details__c</fullName>
        <label>Impact of Unresolved Pain Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Impact_of_Unresolved_Pain_Determined__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Quantifiable impact of keeping the status quo and not purchasing Node.</inlineHelpText>
        <label>Impact of Unresolved Pain Determined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Industry_Focus_Qualification_AE_Score__c</fullName>
        <formula>IF(ISPICKVAL(Industry_Focus_Qualification_AE__c, &quot;7+ Target Industries&quot;), 4, 
 IF(ISPICKVAL(Industry_Focus_Qualification_AE__c, &quot;&apos;4-6 Target Industries&quot;), 3, 
  IF(ISPICKVAL(Industry_Focus_Qualification_AE__c, &quot;&apos;2-3 Target Industries&quot;), 2, 
    IF(ISPICKVAL(Industry_Focus_Qualification_AE__c, &quot;&apos;1 Target Industry&quot;), 1, null
    )
   )
  )
 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Industry Focus Qualification AE Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Industry_Focus_Qualification_AE__c</fullName>
        <label>Industry Focus Qualification - AE</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>7+ Target Industries</fullName>
                </value>
                <value>
                    <fullName>4-6 Target Industries</fullName>
                </value>
                <value>
                    <fullName>2-3 Target Industries</fullName>
                </value>
                <value>
                    <fullName>1 Target Industry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industry_Focus_Qualification_SDR_Score__c</fullName>
        <formula>IF(ISPICKVAL(Industry_Focus_Qualification_SDR__c, &quot;7+ Target Industries&quot;), 4, 
 IF(ISPICKVAL(Industry_Focus_Qualification_SDR__c, &quot;&apos;4-6 Target Industries&quot;), 3, 
  IF(ISPICKVAL(Industry_Focus_Qualification_SDR__c, &quot;&apos;2-3 Target Industries&quot;), 2, 
    IF(ISPICKVAL(Industry_Focus_Qualification_SDR__c, &quot;&apos;1 Target Industry&quot;), 1, null
    )
   )
  )
 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Industry Focus Qualification SDR Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Industry_Focus_Qualification_SDR__c</fullName>
        <label>Industry Focus Qualification - SDR</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>7+ Target Industries</fullName>
                </value>
                <value>
                    <fullName>4-6 Target Industries</fullName>
                </value>
                <value>
                    <fullName>2-3 Target Industries</fullName>
                </value>
                <value>
                    <fullName>1 Target Industry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Meeting_Date__c</fullName>
        <label>Initial Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Meeting_Recording_URL__c</fullName>
        <label>Initial Meeting Recording URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Initial_Meeting_Result__c</fullName>
        <label>Initial Meeting Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Reschedule Requested - By Contact</fullName>
                </value>
                <value>
                    <fullName>Reschedule Requested - By Opportunity Owner</fullName>
                </value>
                <value>
                    <fullName>Reschedule Requested - No Show</fullName>
                </value>
                <value>
                    <fullName>Unable to Reschedule - No Response</fullName>
                </value>
                <value>
                    <fullName>Unable to Reschedule - Other</fullName>
                </value>
                <value>
                    <fullName>Canceled Indefinitely - By Contact</fullName>
                </value>
                <value>
                    <fullName>Canceled Indefinitely - By Opportunity Owner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Meeting_Status__c</fullName>
        <label>Initial Meeting Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Did Not Attempt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>